--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "node_test",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/sgwrysk/node_test/issues"
   },
-  "homepage": "https://github.com/sgwrysk/node_test#readme"
+  "homepage": "https://github.com/sgwrysk/node_test#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {},
+  "description": ""
 }
